fix: fix pixelperfect shift in page-pricing section for <= 414px

--- a/src/scss/index/page-pricing.scss
+++ b/src/scss/index/page-pricing.scss
@@ -14,7 +14,7 @@
   .pricing-container {
     @include mixins.flex(row, space-between, center);
     flex-wrap: wrap;
-    row-gap: 48px;
+    gap: 50px 48px;
 
     width: 100%;
   }
@@ -23,7 +23,6 @@
     flex: 1 1 0;
 
     box-sizing: border-box;
-    max-width: 370px;
     padding: 0 1.5rem;
 
     text-align: center;
@@ -33,6 +32,8 @@
 
     h3 {
       margin-bottom: 200px;
+
+      line-height: 1.5;
     }
 
     .pricing-value {
